[package]
name = "geek-chatserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dashmap = "6.0.1"
futures = "0.3.30"
tokio = { version = "1.39.3", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
